--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -170,6 +170,11 @@
 						"text": "vinicius.roloffmarques@gmail.com"
 					},
 					{
+						"name": "Linkedin",
+						"link": "https://www.linkedin.com/in/viniciusroloffmarques",
+						"text": "viniciusroloffmarques"
+					},
+					{
 						"name": "Skype",
 						"link": "skype:vinicius.roloffmarques?chat",
 						"text": "vinicius.roloffmarques"
