--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -174,6 +174,11 @@
 						"text": "vinicius.roloffmarques"
 					},
 					{
+						"name": "Linkedin",
+						"link": "https://www.linkedin.com/in/viniciusroloffmarques",
+						"text": "viniciusroloffmarques"
+					},
+					{
 						"name": "Facebook",
 						"link": "https://www.facebook.com/vinicius.roloffmarques",
 						"text": "vinicius.roloffmarques"
