--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -5,7 +5,7 @@
 		"about": {
 			"title": "About me",
 			"subtitle": "Self introduction",
-			"description": "<p>I am 29 years old and I live in Pelotas - RS - Brazil. I have been working as a Front End Developer since 2004, when I started working at <a href=\"http://www.ag2.com.br\" target=\"_blank\">AG2 Publicis Modem</a>, where I worked until March of 2013. In April of 2013 I was invited to work at <a href=\"http://nodo.cc\" target=\"_blank\">Nodo</a>, where I have been working at the moment.<br>I am married, kind of an athlete, maniac for meat, crazy for beer and passionate about traveling.<br>I am dedicated, organized, engaged and I love what I do.</p>"
+			"description": "<p>I am {{AGE}} years old and I live in Pelotas - RS - Brazil. I have been working as a Front End Developer since 2004, when I started working at <a href=\"http://www.ag2.com.br\" target=\"_blank\">AG2 Publicis Modem</a>, where I worked until March of 2013. In April of 2013 I was invited to work at <a href=\"http://nodo.cc\" target=\"_blank\">Nodo</a>, where I have been working at the moment.<br>I am married, kind of an athlete, maniac for meat, crazy for beer and passionate about traveling.<br>I am dedicated, organized, engaged and I love what I do.</p>"
 		},
 		"highlights": {
 			"title": "Work with global companies",
